--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: Auto Health Report
 # Controls when the workflow will run
 on:
   schedule:
-  # 定时任务，在每天的7点(beijin time)触发
-    - cron: '0 23 * * *'
+  # 定时任务，在每天的8点(beijin time)触发
+    - cron: '0 1 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -29,7 +29,9 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: start task
-        run: java -jar SeleniumTest.jar
+        env:
+          key:${{ secrets.KEY }}
+        run: java -jar SeleniumTest.jar ${key}
         
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
