--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,7 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
       - name: start task
-        env:
-          key:${{ secrets.KEY }}
-        run: java -jar SeleniumTest.jar ${key}
+        run: java -jar SeleniumTest.jar ${{ secrets.KEY }}
         
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
