--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,17 @@ jobs:
       - name: start task
         run: java -jar SeleniumTest.jar ${{ secrets.KEY }}
         
+      - name: Compress screen cuts
+        uses: vimtor/action-zip@v1
+        with:
+          files: file://screencuts/
+          dest: result.zip
+      - name: upload result
+        uses: actions/upload-artifact@v1
+        with:
+          name: my-artifact
+          path: ${{ github.workspace }}/result.zip
+        
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         with:
